fixed spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -191,7 +191,7 @@ footer h4 {
   font-weight: 600;
   font-size: 20px;
   line-height: 1.5;
-  margin: 0;
+  margin: 10px;
 }
 
 footer p {
@@ -203,7 +203,7 @@ footer p {
 }
 
 footer ul {
-  padding: 5px;
+  padding: 10px;
 }
 
 footer li {
@@ -217,6 +217,11 @@ footer a {
   opacity: 0.7;
   font-size: 13px;
   text-decoration: none;
+}
+
+footer a:hover {
+  font-style: italic;
+  text-decoration: wavy underline;
 }
 
 @media (max-width: 960px) {
